--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
                 <li><a href="">Acceuil</a></li>
                 <li>Pages étudiants
                     <ul class="subMenu">
-                        <li><a href ="../avatar/louis/src/Main.html" target="cible">Page Louis</a></li>
-                        <li><a href ="../avatar/adrien/Exercice1.html" target="cible">Page Adrien</a></li>
-                        <li><a href ="../avatar/sacha/korg.html" target="cible">Page Sacha</a></li>
-                        <li><a href ="../avatar/maxime/ds1.html" target="cible">Page Maxime</a></li>
-                        <li><a href ="../avatar/valentin/pageweb.html" target="cible">Page Valentin</a></li>
+                        <li><a href ="./louis/src/Main.html" target="cible">Page Louis</a></li>
+                        <li><a href ="./adrien/Exercice1.html" target="cible">Page Adrien</a></li>
+                        <li><a href ="./sacha/korg.html" target="cible">Page Sacha</a></li>
+                        <li><a href ="./maxime/ds1.html" target="cible">Page Maxime</a></li>
+                        <li><a href ="./valentin/pageweb.html" target="cible">Page Valentin</a></li>
                     </ul>
                 </li>
                 <li><a href ="">Avatar</a></li>
