--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
                 <li><a href ="">About us</a></li>
             </ul>
         </nav> 
-        <iframe title="cible" src="../avatar/avatar tab/menu.html" name="cible">
+        <iframe title="cible" src="./avatar tab/menu.html" name="cible">
     </body>
 </html>
