g modifier ma page

--- a/maxime/ds1.html
+++ b/maxime/ds1.html
@@ -6,7 +6,7 @@
 			Groot
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant"  >
-        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css.css" media="all" type="text/css">
         <style>
 
@@ -15,7 +15,7 @@
 
 	<body>
         <header id="tete">
-            <article><img class="source" src="http://www.marvel-cineverse.fr/medias/site/logos/logosite.png" width="100" height="80" alt="source" usemap="#source"></article>
+            <article><img class="source" src="logosite.png" width="100" height="80" alt="source" usemap="#source"></article>
             <map name="source">
                 <area shape="circle" coords="70,60,30" href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/groot.html#Biographie" alt="source" title="source">
             </map>
@@ -112,9 +112,9 @@
         <footer id="pied">
             <blockquote>« Je s'appelle Groot. »</blockquote>
             <figure>
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy1" title="gardiendelagalaxy1" width="50" height="40">
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy2" title="gardiendelagalaxy2" width="50" height="40">
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy3" title="gardiendelagalaxy3" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy1" title="gardiendelagalaxy1" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy2" title="gardiendelagalaxy2" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy3" title="gardiendelagalaxy3" width="50" height="40">
             </figure> 
         </footer>
     </body>
