--- a/adrien/Exercice1.html
+++ b/adrien/Exercice1.html
@@ -77,6 +77,9 @@
                     document.getElementById("myAudio").pause();
                 }
 </script>
+        
+        <audio src="" id="myAudio"></audio>
+
 
 
 
