--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8" > 
 		<title>
-			Super Heros
+			Menu
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant"  >
         <link rel="stylesheet" href="style.css" media="all" type="text/css">
@@ -12,20 +12,20 @@
         <h1>Super Hero</h1>
         <nav>
             <ul class="menu">
-                <li><a href="">Acceuil</a></li>
+                <li><a href="./acceuil/acceuil.html" target="cible">Acceuil</a></li>
                 <li>Pages étudiants
                     <ul class="subMenu">
                         <li><a href ="./louis/src/Main.html" target="cible">Page Louis</a></li>
                         <li><a href ="./adrien/Exercice1.html" target="cible">Page Adrien</a></li>
                         <li><a href ="./sacha/korg.html" target="cible">Page Sacha</a></li>
-                        <li><a href ="./maxime/ds1.html" target="cible">Page Maxime</a></li>
+                        <li><a href ="./maxime/main.html" target="cible">Page Maxime</a></li>
                         <li><a href ="./valentin/pageweb.html" target="cible">Page Valentin</a></li>
                     </ul>
                 </li>
-                <li><a href ="">Avatar</a></li>
-                <li><a href ="">About us</a></li>
+                <li><a href ="./avatartab/avatartab.html" target="cible">Avatar</a></li>
+                <li><a href ="" target="cible">About us</a></li>
             </ul>
         </nav> 
-        <iframe title="cible" src="./avatar tab/menu.html" name="cible">
+        <iframe id="Iframe" src="./acceuil/acceuil.html" name="cible">
     </body>
-</html>
+</html> 
