--- a/adrien/Exercice1.html
+++ b/adrien/Exercice1.html
@@ -12,6 +12,7 @@
         </header>
 
 <hr>
+        <div> Analyse de votre identité </div>
 <button type="button" onclick="init()">Commencer</button>
 <hr>
 <div id="webcam-container"></div>
