--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 	<head>
         <meta charset="utf-8" > 
 		<title>
-			Menu
+			Valms
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant"  >
         <link rel="stylesheet" href="style.css" media="all" type="text/css">
+        <link rel="icon" href="icon.jpeg" type="image/icon type">
 	</head>
 	<body>
         <h1>Super Hero</h1>
@@ -23,7 +24,7 @@
                     </ul>
                 </li>
                 <li><a href ="./avatartab/avatartab.html" target="cible">Avatar</a></li>
-                <li><a href ="" target="cible">About us</a></li>
+                <li><a href ="./aboutus/about_us.html" target="cible">About us</a></li>
             </ul>
         </nav> 
         <iframe id="Iframe" src="./acceuil/acceuil.html" name="cible">
