--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant"  >
         <link rel="stylesheet" href="style.css" media="all" type="text/css">
-        <link rel="icon" href="icon.jpeg" type="image/icon type">
+        <link rel="icon" href="icon.png" type="image/icon type">
 	</head>
 	<body>
         <h1>Super Hero</h1>
