--- a/aboutus/about_us.html
+++ b/aboutus/about_us.html
@@ -12,7 +12,7 @@
         <div id="div_regroup">
             <nav id="colonne">
                 <ul><big>Contact us</big>
-                    <li>vamlms@gmail.com</li>
+                    <li>valms@gmail.com</li>
                     <li> 02 32 74 46 00</li>
                     <li>Rue Boris Vian, 76610 Le Havre </li>
                 </ul>
