--- a/maxime/main.html
+++ b/maxime/main.html
@@ -12,7 +12,7 @@
 
 	<body>
         <header>
-            <p><img class="source" src="http://www.marvel-cineverse.fr/medias/site/logos/logosite.png" alt="source" usemap="#source"></p>
+            <p><img class="source" src="logosite.png" alt="source" usemap="#source"></p>
             <map name="source">
                 <area shape="circle" coords="70,60,50" href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/groot.html#Biographie" alt="source" title="source">
             </map>
@@ -186,9 +186,9 @@
             <blockquote>« Je s'appelle Groot. »</blockquote>
             <article> Galmant Maxime </article>
             <figure>
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy1" title="gardiendelagalaxy1" width="50" height="40">
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy2" title="gardiendelagalaxy2" width="50" height="40">
-                <img src="http://www.marvel-cineverse.fr/medias/images/guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy3" title="gardiendelagalaxy3" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy1" title="gardiendelagalaxy1" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy2" title="gardiendelagalaxy2" width="50" height="40">
+                <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy3" title="gardiendelagalaxy3" width="50" height="40">
             </figure> 
         </footer>
     </body>
