--- a/adrien/Exercice1.html
+++ b/adrien/Exercice1.html
@@ -25,7 +25,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/74aVASIpT/";
+    const URL = "https://teachablemachine.withgoogle.com/models/gQ5DO6gdZ/";
 
     let model, webcam, labelContainer, maxPredictions;
 
