--- a/maxime/main.html
+++ b/maxime/main.html
@@ -3,10 +3,9 @@
 	<head>
         <meta charset="utf-8" > 
 		<title>
-			DS WEB
+			Groot
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant" >
-        <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
         <link rel="stylesheet" href="css.css" media="all" type="text/css">
 	</head>
 
@@ -24,12 +23,12 @@
 
         <nav>
             <ul>
-                <li> <a href="#original"</a> Groot Originel </li>           
-                <li> <a href="#bebe">Bébé Groot</a> </li>
-                <li> <a href="#ado"> Groot Ado</a> </li>
-                <li> <a href="#surnoms"> Surnoms</a> </li>
-                <li> <a href="#anecdote"> Info</a> </li>
-                <li> <a href="#ennemie"> Êtes-vous une ennemie ?</a> </li>
+                <li> <a href="#original"> Groot Originel </a>           
+                <li> <a href="#bebe">Bébé Groot</a> 
+                <li> <a href="#ado"> Groot Ado</a>
+                <li> <a href="#surnoms"> Surnoms</a>
+                <li> <a href="#anecdote"> Info</a>
+                <li> <a href="#ennemie"> Êtes-vous une ennemie ?</a>
             </ul>
         </nav>
 
@@ -47,7 +46,7 @@
 
         <div id="ennemie">Le détecteur d'ennemie</div>
         <button type="button" onclick="init()">Identifier</button>
-        <div id="webcam-container" id="cam"></div>
+        <div id="webcam-container"></div>
         <div id="label-container"></div>
         <audio src="guardians-of-the-galaxy-soundtrack-06-ronans-theme.mp3" id="ronan"></audio>
         <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
@@ -117,20 +116,23 @@
         </aside>
         <div>
             <section class="sec1" id="original">
+                <h2> Groot Originel </h2>
                 <a><img src="grootadulte.jpg" alt="image de groot" class="adulte"></a>
-
-                <p>
-                   Groot est un <b class="big"><em>Flora colossus</em></b> et le complice de Rocket Raccoon. <br>
-                   Ensemble, le duo traversa la galaxie à la poursuite de primes jusqu'à ce qu'ils ne croisent la route de Star-Lord et Gamora et qu'ils ne se fassent capturer et emprisonner au Kyln, où ils rencontrèrent aussi Drax le Destructeur. <br>
-                   Ils acceptèrent alors de travailler ensemble pour s'échapper et vendre l'Orbe pour un gain massif. <br>
-                   Toutefois, quand ils découvrirent que l'Orbe contenait une des Pierres d'Infinités qui était recherchée par Ronan l'Accusateur, Groot convainquit ses amis de tout risquer pour mettre fin aux plans diaboliques de Ronan. <br>
-                   Durant la Bataille de Xandar, Groot sacrifia sa propre vie pour sauver ses nouveaux amis. <br>
-                   Néanmoins, une partie de son corps détruit fut replanté par Rocket pour donner naissance un nouveau Groot, alors qu'ils formaient les Gardiens de la Galaxie.<br>
-                </p>               
+                <article>
+                    <h3> Histoire Parti 1 </h3>
+                    Groot est un <b class="big"><em>Flora colossus</em></b> et le complice de Rocket Raccoon. <br>
+                    Ensemble, le duo traversa la galaxie à la poursuite de primes jusqu'à ce qu'ils ne croisent la route de Star-Lord et Gamora et qu'ils ne se fassent capturer et emprisonner au Kyln, où ils rencontrèrent aussi Drax le Destructeur. <br>
+                    Ils acceptèrent alors de travailler ensemble pour s'échapper et vendre l'Orbe pour un gain massif. <br>
+                    Toutefois, quand ils découvrirent que l'Orbe contenait une des Pierres d'Infinités qui était recherchée par Ronan l'Accusateur, Groot convainquit ses amis de tout risquer pour mettre fin aux plans diaboliques de Ronan. <br>
+                    Durant la Bataille de Xandar, Groot sacrifia sa propre vie pour sauver ses nouveaux amis. <br>
+                    Néanmoins, une partie de son corps détruit fut replanté par Rocket pour donner naissance un nouveau Groot, alors qu'ils formaient les Gardiens de la Galaxie.<br>
+                </article>
             </section>
             <div>
                 <section class="grid" id="bebe">
+                    <h2> Groot bébé </h2>
                     <article> 
+                        <h3> Histoire Parti 2 </h3>
                         Tandis que le nouveau Groot grandissait lentement, il resta avec les Gardiens et s'efforça de les suivre dans de nombreuses aventures.
                         Ils furent rapidement embauchés par les Souverains pour détruire l'Abilisk, mais il furent pris pour cible par leurs anciens employeurs quand Rocket se joua d'eux.
                         Durant leur évasion, ils rencontrèrent le père de Peter Quill, Ego, alors que Groot et Rocket furent capturés avec Yondu Udonta par la faction mutine de Ravageurs de Taserface, mais Groot parvint à tous les libérer.
@@ -140,7 +142,7 @@
                  </section>
 
                  <section class="grid" id="surnoms"> 
-                    Surnoms 
+                    <h2> Surnoms </h2>
                     <ul> 
                         <li>Bébé Groot </li>
                         <li>Le platane</li>
@@ -153,7 +155,9 @@
                 </section> 
 
                 <section class="grid">
+                    <h2> Groot Bébé Suite </h2>
                     <article>
+                        <h3> Histoire Parti 3 </h3>
                         Quand les Gardiens de la Galaxie rencontrèrent Thor, Groot et Rocket se séparèrent temporairement de leurs amis pour
                         accompagner Thor sur Nidavellir afin de l'aider à empêcher Thanos de compléter son Gantelet de l'Infini. Après avoir aidé
                         Thor à obtenir son arme, Stormbreaker, Groot et Rocket se rendirent sur Terre en utilisant le Bifrost et se joignirent à la
@@ -164,11 +168,14 @@
                 </section>
 
                 <section class="grid">
+                    <h3>Photo de Bébé Groot</h3>
                     <a><img src="grootbebe.jpg" alt="image de groot" class="bebe"></a>
                 </section>
 
                 <section class="grid" id="ado">
+                    <h2> Groot adolescent </h2>
                     <article>
+                        <h3> Histoire Parti 4 </h3>
                         Cinq ans plus tard, les Avengers parvinrent à ressusciter les victimes du Snap, ramenant Groot à la vie. Aux côtés du
                         Soldat de l'Hiver, Groot quitta le Wakanda par un portail interdimensionnel et rejoignit la Bataille de la Terre où Thanos
                         fut définitivement vaincu. À la suite de la bataille remportée, Groot assista aux funérailles de Tony Stark avant
@@ -177,6 +184,7 @@
                 </section>
 
                 <section class="grid">
+                    <h3>Photo de Groot Ado</h3>
                     <a><img src="grootado.jpg" alt="image de groot" class="ado"></a>
                 </section>
                
@@ -184,7 +192,7 @@
         </div>
         <footer>
             <blockquote>« Je s'appelle Groot. »</blockquote>
-            <article> Galmant Maxime </article>
+            <p> Galmant Maxime </p>
             <figure>
                 <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy1" title="gardiendelagalaxy1" width="50" height="40">
                 <img src="guardiansofthegalaxy-logo-2.png" alt="gardiendelagalaxy2" title="gardiendelagalaxy2" width="50" height="40">
