--- a/aboutus/about_us.html
+++ b/aboutus/about_us.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <aside>
-            <p>Une équipe de 5 développeurs uniquement composé uniquement de 5 bgs nommés :
+            <p>Une équipe de 5 développeurs uniquement composé de 5 bgs nommés :
                 <br>-Louis
                 <br>-Adrien
                 <br>-Valentin
