--- a/maxime/main.html
+++ b/maxime/main.html
@@ -28,7 +28,7 @@
                 <li> <a href="#ado"> Groot Ado</a>
                 <li> <a href="#surnoms"> Surnoms</a>
                 <li> <a href="#anecdote"> Info</a>
-                <li> <a href="#ennemie"> Êtes-vous une ennemie ?</a>
+                <li> <a href="#ennemie"> Êtes-vous un ennemie ?</a>
             </ul>
         </nav>
 
