--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Super Hero</h1>
         <nav>
             <ul class="menu">
-                <li><a href="./acceuil/acceuil.html" target="cible">Acceuil</a></li>
+                <li><a href="./acceuil/acceuil.html" target="cible">Accueil</a></li>
                 <li>Pages étudiants
                     <ul class="subMenu">
                         <li><a href ="./valentin/pageweb.html" target="cible">Page Valentin</a></li>
