--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 </li>
                 <li><a href ="./avatartab/avatartab.html" target="cible">Avatar</a></li>
                 <li><a href ="./aboutus/about_us.html" target="cible">About us</a></li>
-		<li><a href="./" target = "cible"> Teachable Machine (SG) </a></li>
+		<li><a href="./detecteur.html" target = "cible"> Teachable Machine (SG) </a></li>
             </ul>
         </nav> 
         <iframe id="Iframe" src="./acceuil/acceuil.html" name="cible">
