--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                         <li><a href ="./louis/src/Main.html" target="cible">Page Louis</a></li>
                         <li><a href ="./maxime/main.html" target="cible">Page Maxime</a></li>
                         <li><a href ="./sacha/korg.html" target="cible">Page Sacha</a></li>
+			<li><a href ="./ozan/..html" target = "cible">Page Ozan </a></li>
                     </ul>
                 </li>
                 <li><a href ="./avatartab/avatartab.html" target="cible">Avatar</a></li>
