--- a/aboutus/about_us.html
+++ b/aboutus/about_us.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 		<title>
-			Valms 
+			Valmos 
 		</title>
         <meta charset="utf-8">
         <meta name="Author" content="Sacha Baltide"  >
@@ -12,7 +12,7 @@
         <div id="div_regroup">
             <nav id="colonne">
                 <ul><big>Contact us</big>
-                    <li>valms@gmail.com</li>
+                    <li>valmos@gmail.com</li>
                     <li> 02 32 74 46 00</li>
                     <li>Rue Boris Vian, 76610 Le Havre </li>
                 </ul>
@@ -22,11 +22,12 @@
             </div>
         </div>
         <aside>
-            <p>Une équipe de 5 développeurs uniquement composé de 5 bgs nommés :
+            <p>Une équipe de 6 développeurs uniquement composé de 6 bgs nommés :
                 <br>-Louis
                 <br>-Adrien
                 <br>-Valentin
                 <br>-Maxime
+		<br>-Ozan
                 <br>-Sacha
                 <br>
                 Nous sommes des personnes investis dans notre travail et adorons ce que nous faisons ! 
