--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8" > 
 		<title>
-			Valms
+			Valmos
 		</title>
         <meta name="Author" lang="fr" content="Maxime Galmant"  >
         <link rel="stylesheet" href="style.css" media="all" type="text/css">
