--- a/avatartab/avatartab.html
+++ b/avatartab/avatartab.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <meta name="Author" content="Sacha Baltide"  >
-        <link rel="stylesheet" type="text/css" href="avatartab.css" >
+        <link rel="stylesheet" type="text/css" href="css_site_dynamique.css" >
 	</head>
 	<header>
 
@@ -13,25 +13,30 @@
 		<table>
 			<tbody>
 				<tr>
-					<th>Louis </th>
+					<th>Valentin</th>
 					<th class="colonne">Adrien</th>
-					<th class="colonne">Valentin</th>
-					<th class="colonne">Sacha</th>
+					<th class="colonne">Louis </th>
 					<th class="colonne">Maxime</th>
+					<th class="colonne">Ozan</th>
+					<th class="colonne">Sacha</th>
+					
 				</tr>
 				<tr>
-					<td class="colonne1"><img src="louis.png"></td>
-					<td class="avatar"> <img src="adrien.png"></td>
-					<td class="avatar"><img src="Valentin.png"></td>
-					<td class="avatar"><img src="Sachatte.png"></td>
+					<td class="colonne1"><img src="Valentin.png"></td>
+					<td class="avatar"><img src="adrien.png"></td>
+					<td class="avatar"><img src="louis.png"></td>
 					<td class="avatar"><img src="Maxime.png"></td>
+					<td class="avatar"><img src="ozan.png"></td>
+					<td class="avatar"><img src="Sachatte.png"></td>
+					
 				</tr>
 				<tr>
-					<td class="colonne1">Cousin de Hulk <br> Il a hérité des mêmes capacités. il sera toujours la pour défendre son pays sauf si sur le trajet il croise un BK ou un KFC car la bouffe avant tout ! </td>
+					<td class="colonne1">C'est un homme ? C'est une femme ? Personne ne le sait ! Mais ce dont on est sur c'est qu'il/elle accourera toujours a votre secours sauf si vous n'adherez pas au valeurs des non-binaires</td>
 					<td class="colonne">Un watibg capable de fumer une clope a la vitesse de flash. Son surnom : Le Pompier</td>
-					<td class="colonne">C'est un homme ? C'est une femme ? Personne ne le sait ! Mais ce dont on est sur c'est qu'il/elle accourera toujours a votre secours sauf si vous n'adherez pas au valeurs des non-binaires</td>
-					<td class="colonne">Sacha aka Salto, <br> Ce n'est pas qu'une simple plateforme de streaming. Il peut sortir n'importe quelle référence de n'importe quel sujet. Un allié efficace si vous souhaitez tout connaître. </td>
+					<td class="colonne">Cousin de Hulk <br> Il a hérité des mêmes capacités. il sera toujours la pour défendre son pays sauf si sur le trajet il croise un BK ou un KFC car la bouffe avant tout ! </td>
 					<td class="colonne">Incroyable mais vrai, il sort tout droit du Voyage de Chihiro. Avec sa capacité a se transformer en dragon il pourra vous sauver en toute circonstances mais uniquement si vous êtes une petite fille comme chihiro</td>
+					<td class="colonne">Partagé entre le réel et le virtuel, ce jeune héro esst capable d'invoquez des personnages de son jeu préféré : League of legends<br> Cependant il n'arrive pas toujours à se détacher de ses parties en ranked.</td>
+					<td class="colonne">Sacha aka Salto, <br> Ce n'est pas qu'une simple plateforme de streaming. Il peut sortir n'importe quelle référence de n'importe quel sujet. Un allié efficace si vous souhaitez tout connaître. </td>
 				</tr>
 			</tbody>
 		</table>
