--- a/avatartab/avatartab.html
+++ b/avatartab/avatartab.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
         <meta name="Author" content="Sacha Baltide"  >
-        <link rel="stylesheet" type="text/css" href="css_site_dynamique.css" >
+        <link rel="stylesheet" type="text/css" href="avatartab.css" >
 	</head>
 	<header>
 
@@ -26,7 +26,7 @@
 					<td class="avatar"><img src="adrien.png"></td>
 					<td class="avatar"><img src="louis.png"></td>
 					<td class="avatar"><img src="Maxime.png"></td>
-					<td class="avatar"><img src="ozan.png"></td>
+					<td class="avatar"><img src="Ozan.png"></td>
 					<td class="avatar"><img src="Sachatte.png"></td>
 					
 				</tr>
