--- a/aboutus/about_us.html
+++ b/aboutus/about_us.html
@@ -34,7 +34,7 @@
             </p>
         </aside>
         <section class="centre">
-            <img src="bereal.jpg">
+            <img src="bereale.jpg">
         </section>
 
     </body>
