--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     </ul>
                 </li>
                 <li><a href ="./avatartab/avatartab.html" target="cible">Avatar</a></li>
-                <li><a href ="./aboutus/about_us.html" target="cible">About us</a></li>
+                <li><a href ="./about_us/about_us.html" target="cible">About us</a></li>
 		<li><a href="./detecteur.html" target = "cible"> Teachable Machine (SG) </a></li>
             </ul>
         </nav> 
